adding a section for activity lifetime

--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -663,32 +663,38 @@ and are providing opportunities to improve them.
 
 
 \racomment{
+
+\subsection{The mass-dependence of magnetic activity lifetimes}
+\label{sec:activity}
+
+The mass dependence of magnetic activity lifetimes has been demonstrated
+previously \racomment{for M dwarfs} \citep[\eg][]{west2008, newton2017,
+kiman2019} and, if the detectability of a rotation period is considered to be
+a magnetic activity proxy, then our results provide further evidence for a
+mass-dependent activity lifetime.
+
 In order to measure a rotation period at all, there must be some magnetically
 active regions (either bright plages or dark spots), of a reasonable size on
 the surface of a star.
 In other words, some minimum magnetic activity level is presumably required to
 produce coherent light curve-variability, from which a rotation period can be
 confidently measured.
-In this case, the relatively sharp upper-edge of the rotation period
-distribution seen in figure \ref{fig:vplot} may be caused by a finite active
-lifetime of stars, \ie\ stars older than a critical age are no longer active
-enough to produce periodic, high-amplitude variability.
-The data presented in figure \ref{fig:vplot} indicate that this active
-lifetime is a function of stellar mass, because the velocity dispersions of
-stars along the upper edge of the rotation period distribution increase with
-decreasing mass.
-
-The mass dependence of magnetic activity lifetimes has been demonstrated
-previously \racomment{for M dwarfs} \citep[\eg][]{west2008, newton2017,
-kiman2019}.
-If the detectability of a rotation period is considered to be a magnetic
-activity proxy, then our results provide further evidence for a {\it
-mass-dependent} activity lifetime.
+The relatively sharp upper-edge of the rotation period distribution seen in
+figure \ref{fig:vplot} may therefore be caused by a finite active lifetime of
+stars, \ie\ stars older than a critical age are no longer active enough to
+produce periodic, high-amplitude variability.
+% The data presented in figure \ref{fig:vplot} indicate that this active
+% lifetime is a function of stellar mass, because the velocity dispersions of
+% stars along the upper edge of the rotation period distribution increase with
+% decreasing mass.
+In figure \ref{fig:vplot}, the velocity dispersions of stars along the upper
+edge of the rotation period distribution increase with decreasing mass,
+indicating that magnetic activity lifetimes are mass-dependent.
 Figure \ref{fig:vplot} shows that the populations of stars with the largest
 velocity dispersions are cooler than 4500 K.
-This implies that \racomment{most of} the oldest stars with detectable
-rotation periods are cooler than 4500 K, \ie\ these-low mass stars stay active
-longer than more massive stars.
+This implies that most of the oldest stars with detectable rotation periods
+are cooler than 4500 K, \ie\ these-low mass stars stay active longer than more
+massive stars.
 }
 % a decrease in magnetic activity after stars exceed a certain age.
 % If so, it is possible that the ages of stars near this upper-edge represent
@@ -739,11 +745,12 @@ average, {\it younger} than the total population of G stars in the Kepler
 field.
 On the other hand, the late K and early M dwarfs with detectable rotation
 periods have a similar age distribution to the overall Kepler population which
-suggests that the oldest K and M dwarfs are represented in the \mct\ sample.
+suggests that \racomment{most of} the oldest K and M dwarfs are represented in
+the \mct\ sample.
 This result bolsters the evidence that M dwarf rotation periods are measurable
-at older ages than G dwarf rotation periods.
-In other words, G stars become magnetically inactive and have fewer active
-surface regions {\it at a younger age than M dwarfs}.
+at older ages than G dwarf rotation periods and that G stars become
+magnetically inactive and have fewer active surface regions {\it at a younger
+age than M dwarfs}.
 
 \begin{figure}
   \caption{
