I'm not procrastinating... YOU'RE procrastinating!

--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -139,7 +139,7 @@ Woodlawn Drive, Honolulu, HI 96822, USA}
 \affiliation{Department of physics, CUNY Graduate Center, City
 University of New York, Manhattan, NY, USA}
 
-\author{Dan Foreman-Mackey}
+\author[0000-0002-9328-5652]{Daniel Foreman-Mackey}
 \affiliation{Center for Computational Astrophysics, Flatiron Institute,
 162 5th Avenue, Manhattan, NY, USA}
 
