--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -115,7 +115,7 @@
 \affiliation{Center for Astrophysics {\normalfont |} Harvard \&
 Smithsonian, 60 Garden Street, Cambridge, MA 02138, USA}
 
-\author{Adrian M. Price-Whelan}
+\author[0000-0003-0872-7098]{Adrian~M.~Price-Whelan}
 \affiliation{Center for Computational Astrophysics, Flatiron Institute,
 162 5th Avenue, Manhattan, NY, USA}
 
