Minor text fixes, ORCID

--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -111,8 +111,8 @@
 162 5th Avenue, Manhattan, NY, USA}
 \affiliation{Department of Astronomy, Columbia University, Manhattan, NY, USA}
 
-\author{Angus Beane}
-\affiliation{Center for Astrophysics {\normalfont |} Harvard \&
+\author[0000-0002-8658-1453]{Angus~Beane}
+\affiliation{Center for Astrophysics \textpipe{} Harvard \&
 Smithsonian, 60 Garden Street, Cambridge, MA 02138, USA}
 
 \author[0000-0003-0872-7098]{Adrian~M.~Price-Whelan}
@@ -344,7 +344,7 @@ Bayestar dust map implemented in the {\tt dustmaps} {\it Python} package
 \citep{green2018}, and {\tt astropy} \citep{astropy2013, astropy2018}.
 For this work, we used the precise \textit{Gaia} DR2 photometric color,
 $G_{\rm BP} - G_{\rm RP}$, to estimate \teff\ for the Kepler rotators.
-\racomment{The calibration of this relation is described Curtis \etal\ (2020,
+\racomment{The calibration of this relation is described in Curtis \etal\ (2020,
 in prep) and summarized in the Appendix of this paper.}
 
 Photometric binaries and subgiants were removed from the \mct\ sample by
@@ -382,7 +382,7 @@ likely.
 However, it is also possible that the rotation periods of the oldest early M
 dwarfs are so long that they are not measurable with Kepler data.
 \racomment{Ground-based rotation period measurements of early M dwarfs
-(spectral types earlier than $\sim$ M2.5, \teff $\gtrsim$3500) indicate that
+(spectral types earlier than $\sim$ M2.5, \teff $\gtrsim$3500 K) indicate that
 there is an upper limit to their rotation periods of around 80 days
 \citep{newton2016, newton2018}, which is longer than the longest rotation
 periods measured for the early M dwarfs in the \mct\ sample (around 50 days).}
