adding orcids and acknowledgements

--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -104,7 +104,7 @@
 \correspondingauthor{Ruth Angus}
 \email{rangus@amnh.org}
 
-\author{Ruth Angus}
+\author[0000-0003-4540-5661]{Ruth Angus}
 \affiliation{Department of Astrophysics, American Museum of Natural History,
 200 Central Park West, Manhattan, NY, USA}
 \affiliation{Center for Computational Astrophysics, Flatiron Institute,
@@ -112,32 +112,34 @@
 \affiliation{Department of Astronomy, Columbia University, Manhattan, NY, USA}
 
 \author[0000-0002-8658-1453]{Angus~Beane}
-\affiliation{Center for Astrophysics \textpipe{} Harvard \&
+\affiliation{Center for Astrophysics $\vert$ Harvard \&
 Smithsonian, 60 Garden Street, Cambridge, MA 02138, USA}
 
 \author[0000-0003-0872-7098]{Adrian~M.~Price-Whelan}
 \affiliation{Center for Computational Astrophysics, Flatiron Institute,
 162 5th Avenue, Manhattan, NY, USA}
 
+\author{Elisabeth Newton}
+\affiliation{Department of Physics and Astronomy, Dartmouth
+College, Hanover, NH, USA}
+
 \author{Jason Curtis}
 \affiliation{Department of Astrophysics, American Museum of Natural History,
 200 Central Park West, Manhattan, NY, USA}
 
-\author{Travis Berger}
+\author[0000-0002-2580-3614]{Travis Berger}
 \affiliation{Institute for Astronomy, University of Hawai`i, 2680
 Woodlawn Drive, Honolulu, HI 96822, USA}
-
-\author{Elisabeth Newton}
-\affiliation{Department of Physics and Astronomy, Dartmouth
-College, Hanover, NH, USA}
 
 \author{Jennifer van Saders}
 \affiliation{Institute for Astronomy, University of Hawai`i, 2680
 Woodlawn Drive, Honolulu, HI 96822, USA}
 
-\author{Rocio Kiman}
+\author[0000-0003-2102-3159]{Rocio Kiman}
 \affiliation{Department of physics, CUNY Graduate Center, City
 University of New York, Manhattan, NY, USA}
+\affiliation{Department of Astrophysics, American Museum of Natural History,
+200 Central Park West, Manhattan, NY, USA}
 
 \author[0000-0002-9328-5652]{Daniel Foreman-Mackey}
 \affiliation{Center for Computational Astrophysics, Flatiron Institute,
@@ -961,6 +963,8 @@ synchronized binaries with rotation periods less than around 10 days.}
 
 \end{itemize}
 
+We thank the anonymous referee for their comments which greatly improved the
+manuscript.
 We would like to thank Suzanne Aigrain for providing thoughtful insight that
 improved this paper.
 This work was partly developed at the 2019 KITP conference `Better stars,
@@ -971,6 +975,7 @@ Parts of this project are based on ideas explored at the Gaia sprints at the
 Flatiron Institute in New York City, 2016 and MPIA, Heidelberg, 2017.
 This work made use of the gaia-kepler.fun crossmatch database created by Megan
 Bedell.
+T.A.B. acknowledges support by a NASA FINESST award (80NSSC19K1424).
 
 Some of the data presented in this paper were obtained from the Mikulski
 Archive for Space Telescopes (MAST).
