adding some new citations and orcid

--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -123,7 +123,7 @@ Smithsonian, 60 Garden Street, Cambridge, MA 02138, USA}
 \affiliation{Department of Physics and Astronomy, Dartmouth
 College, Hanover, NH, USA}
 
-\author{Jason Curtis}
+\author[0000-0002-2792-134X]{Jason L. Curtis}
 \affiliation{Department of Astrophysics, American Museum of Natural History,
 200 Central Park West, Manhattan, NY, USA}
 
