--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -189,6 +189,26 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{agueros2018,
+       author = {{Ag{\"u}eros}, M.~A. and {Bowsher}, E.~C. and {Bochanski {\it et al}}, J.~J.},
+        title = "{A New Look at an Old Cluster: The Membership, Rotation, and Magnetic Activity of Low-mass Stars in the 1.3 Gyr Old Open Cluster NGC 752}",
+      journal = {\apj},
+     keywords = {open clusters and associations: individual: NGC 752, stars: activity, stars: rotation, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2018,
+        month = jul,
+       volume = {862},
+       number = {1},
+          eid = {33},
+        pages = {33},
+          doi = {10.3847/1538-4357/aac6ed},
+archivePrefix = {arXiv},
+       eprint = {1804.02016},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...862...33A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{endal1981,
        author = {{Endal}, A.~S. and {Sofia}, S.},
         title = "{Rotation in solar-type stars. I - Evolutionary models for the spin-down of the sun}",
@@ -1588,6 +1608,25 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2013A&A...556A..36G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{gallet2015,
+       author = {{Gallet}, F. and {Bouvier}, J.},
+        title = "{Improved angular momentum evolution model for solar-like stars. II. Exploring the mass dependence}",
+      journal = {\aap},
+     keywords = {stars: evolution, stars: solar-type, stars: low-mass, stars: rotation, stars: mass-loss, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2015,
+        month = may,
+       volume = {577},
+          eid = {A98},
+        pages = {A98},
+          doi = {10.1051/0004-6361/201525660},
+archivePrefix = {arXiv},
+       eprint = {1502.05801},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015A&A...577A..98G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{macgregor1991,
        author = {{MacGregor}, K.~B. and {Brenner}, M.},
