--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -154,7 +154,7 @@ University of New York, Manhattan, NY, USA}
 \affiliation{Observatories of the Carnegie Institution for
 Science, 813 Santa Barbara Street, Pasadena, CA 91101, USA}
 
-\author{Jacqueline K. Faherty}
+\author[0000-0001-6251-0573]{Jacqueline K. Faherty}
 \affiliation{Department of Astrophysics, American Museum of Natural History,
 200 Central Park West, Manhattan, NY, USA}
 
