adding modified text from referee report

--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -626,6 +626,20 @@ douglas2017}.
 These are the oldest cluster M dwarfs with measured photometric rotation
 periods and the \citet{angus2019} model therefore encapsulates the behavior of
 these cool stars at Praesepe age.
+Most semi-physical spin-down models predict that, once the rotation periods of
+stars converge to a tight sequence, they approximately spin down with a common
+braking index \citep[e.g., Fig. 5 in][]{gallet2015}.
+While some semi-physical models do not predict that stars have fully converged
+by the age of Praesepe, the observations suggest that they have
+\citep{douglas2019}, in which case, projecting the Praesepe sequence forward
+with a single braking index that is common to all stars and constant in time
+is appropriate.
+However, observations of low-mass stars in older clusters \citep[\eg, NGC
+6811, NGC 752, and Ruprecht 147][Curtis \etal, submitted]{curtis2019,
+agueros2018} demonstrate that the assumptions adopted in those models must be
+invalid, or inaccurate in some quantitative way (for example, the
+core-envelope coupling timescale is inaccurately calibrated).
+
 There are many other empirical gyrochronology models we could have chosen to
 compare with our data.
 For example, the \citet{barnes2003, barnes2007, mamajek2008, meibom2011,
@@ -654,13 +668,27 @@ Consequently, like the \citet{angus2019} model, the \citet{barnes2010} model
 in its current form does not have the flexibility to capture the mass and
 time-variable rotational evolution revealed by the data explored here.
 
-The lack of flexibility in these empirical models should not be seen as a
-failing of gyrochronology.
-With a paucity of old calibration stars, the only possible approach has been
-to fit simple relations to young stars and extrapolate to old ages.
-Naturally however, in this era of precise space-based photometry, new data are
-revealing flaws in our old models (which no one ever thought were perfect),
-and are providing opportunities to improve them.
+% The lack of flexibility in these empirical models should not be seen as a
+% failing of gyrochronology.
+% With a paucity of old calibration stars, the only possible approach has been
+% to fit simple relations to young stars and extrapolate to old ages.
+% Naturally however, in this era of precise space-based photometry, new data are
+% revealing flaws in our old models (which no one ever thought were perfect),
+% and are providing opportunities to improve them.
+
+It is not surprising that the \citet{angus2019} model, or other gyrochronology
+models do not reproduce the data, since tensions with
+\citet{skumanich1972}-type spin-down have been revealed whenever new rotation
+periods of benchmark stars have become available.
+With the influx of new stellar rotation periods provided by \kepler/\ktwo\ and
+\tess, our understanding of spin-down is changing rapidly.
+New data are revealing flaws in not just the calibration of but also the
+functional forms of old models.
+We have shown that velocity dispersion data provides support for more
+sophisticated models incorporating additional physical effects \citep[\eg,
+core-envelope coupling][]{spada2019} over simple empirical models.
+Alternatively, more flexible empirical frameworks, like a Gaussian process
+model, could capture everything we now know about stellar spin-down.
 }
 
 
