--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -131,7 +131,7 @@ College, Hanover, NH, USA}
 \affiliation{Institute for Astronomy, University of Hawai`i, 2680
 Woodlawn Drive, Honolulu, HI 96822, USA}
 
-\author{Jennifer van Saders}
+\author[0000-0002-4284-8638]{Jennifer van Saders}
 \affiliation{Institute for Astronomy, University of Hawai`i, 2680
 Woodlawn Drive, Honolulu, HI 96822, USA}
 
@@ -626,10 +626,10 @@ douglas2017}.
 These are the oldest cluster M dwarfs with measured photometric rotation
 periods and the \citet{angus2019} model therefore encapsulates the behavior of
 these cool stars at Praesepe age.
-Most semi-physical spin-down models predict that, once the rotation periods of
+Most semi-empirical spin-down models predict that, once the rotation periods of
 stars converge to a tight sequence, they approximately spin down with a common
 braking index \citep[e.g., Fig. 5 in][]{gallet2015}.
-While some semi-physical models do not predict that stars have fully converged
+While some semi-empirical models do not predict that stars have fully converged
 by the age of Praesepe, the observations suggest that they have
 \citep{douglas2019}, in which case, projecting the Praesepe sequence forward
 with a single braking index that is common to all stars and constant in time
