adding citation to Ruprecht paper

--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -226,8 +226,12 @@ However, in the NGC 6811 cluster which is around 1 Gyr \citep{janes2011,
 sandquist2016},
 late-K dwarfs rotate at the {\it same rate} as early-K dwarfs
 \citep{curtis2019}.
-% In other words, convection zone depth cannot be the only variable that affects
-% stellar spin-down rate.
+\racomment{In addition, new rotation period measurements for low-mass stars in
+the 2.7-Gyr-old cluster Ruprecht 147 show that its slow-rotator sequence is
+flat compared to younger clusters like Praesepe (Curtis \etal\ 2020, submitted
+to AAS Journals).}
+% In other words, convection zone depth cannot be the only variable that
+% affects stellar spin-down rate.
 New semi-empirical models that vary the rate of angular momentum
 redistribution in the interiors of stars are able to reproduce this flattened
 period--color relation \citep{spada2019}.
