--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -711,10 +711,8 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
 @ARTICLE{green2018,
-       author = {{M. Green}, Gregory},
+       author = {{Green}, {Gregory M.}},
         title = "{dustmaps: A Python interface for maps of interstellar dust}",
       journal = {The Journal of Open Source Software},
          year = "2018",
@@ -723,7 +721,7 @@ archivePrefix = {arXiv},
        number = {26},
         pages = {695},
           doi = {10.21105/joss.00695},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2018JOSS....3..695M},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018JOSS....3..695G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
