--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -119,7 +119,7 @@ Smithsonian, 60 Garden Street, Cambridge, MA 02138, USA}
 \affiliation{Center for Computational Astrophysics, Flatiron Institute,
 162 5th Avenue, Manhattan, NY, USA}
 
-\author{Elisabeth Newton}
+\author[0000-0003-4150-841X]{Elisabeth Newton}
 \affiliation{Department of Physics and Astronomy, Dartmouth
 College, Hanover, NH, USA}
 
@@ -145,12 +145,12 @@ University of New York, Manhattan, NY, USA}
 \affiliation{Center for Computational Astrophysics, Flatiron Institute,
 162 5th Avenue, Manhattan, NY, USA}
 
-\author{Yuxi (Lucy) Lu}
+\author[0000-0003-4769-3273]{Yuxi (Lucy) Lu}
 \affiliation{Department of Astronomy, Columbia University, Manhattan, NY, USA}
 \affiliation{Department of Astrophysics, American Museum of Natural History,
 200 Central Park West, Manhattan, NY, USA}
 
-\author{Lauren Anderson}
+\author[0000-0001-5725-9329]{Lauren Anderson}
 \affiliation{Observatories of the Carnegie Institution for
 Science, 813 Santa Barbara Street, Pasadena, CA 91101, USA}
 
@@ -226,15 +226,22 @@ However, in the NGC 6811 cluster which is around 1 Gyr \citep{janes2011,
 sandquist2016},
 late-K dwarfs rotate at the {\it same rate} as early-K dwarfs
 \citep{curtis2019}.
-\racomment{In addition, new rotation period measurements for low-mass stars in
+\racomment{
+    In addition, new rotation period measurements for low-mass stars in
 the 2.7-Gyr-old cluster Ruprecht 147 show that its slow-rotator sequence is
 flat compared to younger clusters like Praesepe (Curtis \etal\ 2020, submitted
-to AAS Journals).}
+to AAS Journals), and departures from classical Skumanich-like spin-down were
+also noted in observations of the $\sim$1.3 Gyr NGC 752 open cluster
+\citep{agueros2018}.
+}
 % In other words, convection zone depth cannot be the only variable that
 % affects stellar spin-down rate.
 New semi-empirical models that vary the rate of angular momentum
-redistribution in the interiors of stars are able to reproduce this flattened
-period--color relation \citep{spada2019}.
+redistribution in the interiors of stars are able to reproduce the flattened
+period--color relation
+\\racomment{
+    seen in these clusters \citep{spada2019}.
+}
 These models suggest that mass and age-dependent angular momentum transport
 between the cores and envelopes of stars has a significant impact on their
 surface rotation rates.
@@ -274,7 +281,9 @@ indication that stars formed dynamically ``hotter'' in the past
 In either case, the vertical velocity distribution is observed to depend
 significantly on stellar age.
 While the velocity of any individual star only provides a weak age constraint
-\racomment{(if any at all)}, because its velocity depends on its current
+\racomment{
+    (if any at all)
+}, because its velocity depends on its current
 position in its orbit, the velocity {\it dispersion} of a {\it population} of
 stars indicates whether that population is old or young relative to other
 populations.
@@ -284,7 +293,8 @@ stars in the Galactic thin disk to ascertain which populations are older and
 which younger, and draw conclusions about the rotational evolution of stars
 based on their implied relative ages.
 
-\racomment{ There is a long history of using kinematic ages to explore the
+\racomment{
+    There is a long history of using kinematic ages to explore the
 evolution of cool dwarfs \citep[\eg][]{reid1995, gizis2000, west2004,
 west2006, schmidt2007, faherty2009, kiman2019}.
 For example, \citet{west2004, west2006} used the vertical distances of stars
@@ -297,9 +307,11 @@ age proxy to explore the evolution of H$\alpha$ equivalent width (a magnetic
 activity indicator), in M dwarfs.
 }
 
-Although {\it vertical} velocity, \vz, is \racomment{a well-established} age
-proxy, it can only be calculated with full 6-dimensional position and velocity
-information.
+Although {\it vertical} velocity, \vz, is \racomment{
+    a well-established
+}
+age proxy, it can only be calculated with full 6-dimensional position and
+velocity information.
 In fact, with full 6D phase space and an assumed Galactic potential, it is
 possible to calculate the dynamically-invariant vertical {\it action}, which may
 be an even better age indicator \citep{beane2018, ting2019}.
@@ -350,8 +362,10 @@ Bayestar dust map implemented in the {\tt dustmaps} {\it Python} package
 \citep{green2018}, and {\tt astropy} \citep{astropy2013, astropy2018}.
 For this work, we used the precise \textit{Gaia} DR2 photometric color,
 $G_{\rm BP} - G_{\rm RP}$, to estimate \teff\ for the Kepler rotators.
-\racomment{The calibration of this relation is described in Curtis \etal\ (2020,
-in prep) and summarized in the Appendix of this paper.}
+\racomment{
+    The calibration of this relation is described in Curtis \etal\ (2020,
+in prep) and summarized in the Appendix of this paper.
+}
 
 Photometric binaries and subgiants were removed from the \mct\ sample by
 applying cuts to the color-magnitude diagram (CMD), shown in figure
@@ -387,11 +401,14 @@ to have measurable rotation periods at old ages, the latter scenario seems
 likely.
 However, it is also possible that the rotation periods of the oldest early M
 dwarfs are so long that they are not measurable with Kepler data.
-\racomment{Ground-based rotation period measurements of early M dwarfs
-(spectral types earlier than $\sim$ M2.5, \teff $\gtrsim$3500 K) indicate that
-there is an upper limit to their rotation periods of around 80 days
+\racomment{
+    Ground-based rotation period measurements of early M dwarfs
+(spectral types earlier than $\sim$ M2.5, \teff\ $\gtrsim$ 3500 K) indicate
+there is a $\sim$ 80 day upper limit to their rotation periods
 \citep{newton2016, newton2018}, which is longer than the longest rotation
-periods measured for the early M dwarfs in the \mct\ sample (around 50 days).}
+periods measured for the early M dwarfs in the \mct\ sample (around 50 days).
+}
+
 The apparent lack of old gyro-ages for M dwarfs in figure
 \ref{fig:age_gradient} may be caused by a combination of ages being
 underestimated by a poorly calibrated model, and rotation period detection
@@ -426,8 +443,10 @@ astropy2018} {\it Python} packages were used to calculate velocities for the
 covariance matrix via Monte Carlo sampling, thereby accounting for the
 covariances between \gaia\ positions, parallaxes and proper motions.
 Stars with negative parallaxes or parallax signal-to-noise ratios less than 10
-(around 3,000 stars), stars fainter than 16th magnitude \racomment{in \gaia\
-G-band} (200 stars), stars with absolute \vb\ uncertainties greater than 1
+(around 3,000 stars), stars fainter than 16th magnitude \racomment{
+    in \gaia\ G-band
+}
+(200 stars), stars with absolute \vb\ uncertainties greater than 1
 \kms\ (1000 stars), and stars with galactic latitudes greater than 15\degrees\
 (5500 stars, justification provided in the appendix) were removed from the
 sample.
@@ -439,8 +458,11 @@ less than 0.5 Gyr \citep[based on the][gyro-model]{angus2019}, because a 0.5
 Gyr gyrochrone\footnote{A gyrochrone is a gyrochronological isochrone, or a
 line of constant age in period-\teff, or period-color space.} traces the
 bottom edge of the main population of rotation periods.
-\racomment{These rapid rotators are probably either very young stars, or
-synchronized binaries (see section \ref{sec:gap}).} After these cuts, around
+\racomment{
+    These rapid rotators are probably either very young stars, or
+synchronized binaries (see section \ref{sec:gap}).
+}
+After these cuts, around
 13,000 stars out of the original $\sim$34,000 were included in the sample.
 
 \section{Results and Discussion}
@@ -521,7 +543,9 @@ these Praesepe-based models.
 The bottom panel of figure \ref{fig:vplot} shows velocity dispersion as a
 function of rotation period and {\it mass}, \citep[from][]{berger2020}, with
 gyrochrones from the \citet{spada2019} model shown in white.
-These gyrochrones are \racomment{plotted for the same ages described above.}
+These gyrochrones are \racomment{
+    plotted for the same ages described above.
+}
 Each point plotted in the top panel also appears in the bottom panel with the
 same color.
 Because velocity dispersion was calculated in bins of \teff, not mass, bin
@@ -565,10 +589,16 @@ ages, the rotation periods of K dwarfs appear {\it constant} with mass, and at
 late ages rotation period {\it increases} with {\it increasing} mass.
 The interpretation of this, according to the \citet{spada2019} model, is that
 lower-mass stars are still braking more efficiently at these intermediate and
-old ages \racomment{compared to higher-mass stars}, but their cores are more
+old ages \racomment{
+    compared to higher-mass stars,
+}
+but their cores are more
 tightly coupled to their envelopes, allowing angular momentum transport
 between the two layers.
-Angular momentum surfaces \racomment{from the core} and prevents the stellar
+Angular momentum surfaces \racomment{
+    from the core
+}
+and prevents the stellar
 envelopes from spinning-down rapidly, and this effect is strongest for late
 K-dwarfs with effective temperatures of $\sim$4000-4500K and masses
 $\sim$0.5-0.7 M$_\odot$.
@@ -633,16 +663,21 @@ these cool stars at Praesepe age.
 Most semi-empirical spin-down models predict that, once the rotation periods of
 stars converge to a tight sequence, they approximately spin down with a common
 braking index \citep[e.g., Fig. 5 in][]{gallet2015}.
-While some semi-empirical models do not predict that stars have fully converged
-by the age of Praesepe, the observations suggest that they have
-\citep{douglas2019}, in which case, projecting the Praesepe sequence forward
-with a single braking index that is common to all stars and constant in time
-is appropriate.
+So, if stellar rotation periods have fully converged by the age of Praesepe,
+as the observations suggest they have \citep{douglas2019}, it is appropriate
+to project the Praesepe sequence forward in time with a single braking index
+that is common to all stars and constant in time.
+% While some semi-empirical models do not predict that stars have
+% by the age of Praesepe, the observations suggest that they have
+% \citep{douglas2019}, in which case, projecting the Praesepe sequence forward
+% with a single braking index that is common to all stars and constant in time
+% is appropriate.
 However, observations of low-mass stars in older clusters \citep[\eg, NGC
-6811, NGC 752, and Ruprecht 147][Curtis \etal, submitted]{curtis2019,
-agueros2018} demonstrate that the assumptions adopted in those models must be
-invalid, or inaccurate in some quantitative way (for example, the
-core-envelope coupling timescale is inaccurately calibrated).
+6811, NGC 752, and Ruprecht 147][Curtis \etal\ 2020, submitted]{curtis2019,
+agueros2018} now demonstrate that the assumptions adopted in the
+semi-empirical models which support a common braking index must be invalid, or
+inaccurate in some quantitative way (for example, the core-envelope coupling
+timescale is inaccurately calibrated).
 
 There are many other empirical gyrochronology models we could have chosen to
 compare with our data.
@@ -654,8 +689,9 @@ These relations have been widely used in the literature, and are similar to
 the \citet{angus2019} relation in that they consist of a color-dependent term
 multiplied by an age-dependent term, \ie\ they are separable in color and age.
 None of these relations follow lines of constant velocity dispersion in figure
-\ref{fig:vplot} because they have a universal power-law index, $n$ ($\approx$
-0.5), which applies to stars of all masses and ages.
+\ref{fig:vplot} because they have a universal power-law index, $n$
+\citep[$\approx$ 0.5,][]{skumanich1972}, which applies to stars of all masses
+and ages.
 They do not have the flexibility to capture the evolving period-color
 relationship seen in the data.
 The \citet{barnes2010} model has a different functional form: it uses Rossby
@@ -681,16 +717,19 @@ time-variable rotational evolution revealed by the data explored here.
 % and are providing opportunities to improve them.
 
 It is not surprising that the \citet{angus2019} model, or other gyrochronology
-models do not reproduce the data, since tensions with
-\citet{skumanich1972}-type spin-down have been revealed whenever new rotation
-periods of benchmark stars have become available.
-With the influx of new stellar rotation periods provided by \kepler/\ktwo\ and
-\tess, our understanding of spin-down is changing rapidly.
+models do not reproduce the data, since tensions with Skumanich-like spin-down
+have been revealed whenever new rotation periods of benchmark stars have
+become available \citep{angus2015, vansaders2016, metcalfe2019, agueros2018,
+curtis2019}.
+With the influx of new stellar rotation periods provided by \kepler/\ktwo,
+\tess, and ground-based facilities, our understanding of spin-down is changing
+rapidly.
 New data are revealing flaws in not just the calibration of but also the
 functional forms of old models.
 We have shown that velocity dispersion data provides support for more
-sophisticated models incorporating additional physical effects \citep[\eg,
-core-envelope coupling][]{spada2019} over simple empirical models.
+sophisticated models that incorporate additional physical effects \citep[\eg,
+core-envelope coupling][]{spada2019} over the simple empirical models used
+today.
 Alternatively, more flexible empirical frameworks, like a Gaussian process
 model, could capture everything we now know about stellar spin-down.
 }
@@ -779,7 +818,10 @@ average, {\it younger} than the total population of G stars in the Kepler
 field.
 On the other hand, the late K and early M dwarfs with detectable rotation
 periods have a similar age distribution to the overall Kepler population which
-suggests that \racomment{most of} the oldest K and M dwarfs are represented in
+suggests that \racomment{
+    most of
+}
+the oldest K and M dwarfs are represented in
 the \mct\ sample.
 This result bolsters the evidence that M dwarf rotation periods are measurable
 at older ages than G dwarf rotation periods and that G stars become
@@ -861,7 +903,9 @@ Although we do not provide an in-depth analysis here (and more data may be
 needed to confirm a connection) these data suggest that the gap may indeed
 separate a young regime where stellar cores are decoupled from their envelopes
 from an old regime where these layers are more tightly coupled.
-If so, this could indicate that \racomment{these phenomena are related, \ie\
+If so, this could indicate that
+\racomment{
+    these phenomena are related, \ie\
 the process that is responsible for changing the shape of gyrochrones in
 rotation-\teff\ space is related to the process that produces the gap.
 % Of course this may just be a coincidence.
@@ -995,10 +1039,10 @@ synchronized binaries with rotation periods less than around 10 days.}
 
 \end{itemize}
 
-We thank the anonymous referee for their comments which greatly improved the
+We thank the anonymous referee for their comments which greatly improved this
 manuscript.
-We would like to thank Suzanne Aigrain for providing thoughtful insight that
-improved this paper.
+We also would like to thank Suzanne Aigrain for providing thoughtful insight
+that improved the paper.
 This work was partly developed at the 2019 KITP conference `Better stars,
 better planets'.
 This research was supported in part by the National Science Foundation under
@@ -1190,7 +1234,7 @@ relationship will be needed to calculate absolute ages.
 
 For this work, we used the precise \textit{Gaia} DR2 photometric color,
 $G_{\rm BP} - G_{\rm RP}$, to estimate \teff\ for the Kepler rotators.
-To calibrate this relation, Curtis \etal\ (2020, in prep) combined effective
+To calibrate this relation, Curtis \etal\ (2020, submitted) combined effective
 temperature measurements for nearby, unreddened field stars in benchmark
 samples, including FGK stars characterized with high-resolution optical
 spectroscopy \citep{brewer2016}, M dwarfs characterized with low-resolution
@@ -1205,7 +1249,7 @@ These benchmark data enable us to accurately estimate \teff\ for cool dwarfs
 \citep[\eg][]{rabus2019}, and allows us to correct for interstellar reddening
 at all temperatures\footnote{The color--temperature relation is described in
 detail in the Appendix of, and the formula is provided in Table 4 of, Curtis
-\etal\ (2020, in prep).}.
+\etal\ (2020, submitted).}.
 The equation we used to calculate photometric temperatures from Gaia \gcolor\
 color is a seventh-order polynomial with coefficients given in table
 \ref{tab:coeffs}.
