--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -569,10 +569,12 @@ core and envelope with time and mass \citep{spada2019}.
 
 The velocity dispersions of stars in the \mct\ sample, shown in figure
 \ref{fig:vplot}, provide the following picture of rotational evolution.
-At young ages \citep[younger than around 1 Gyr but still old enough to be on
+\racomment{
+    At young ages \citep[younger than around 1 Gyr but still old enough to be on
 the main sequence and have transitioned from the `C' sequence to the `I'
 sequence ][]{barnes2003}, stellar rotation period {\it decreases} with {\it
 increasing} mass.
+}
 This is likely because lower-mass stars with deeper convection zones have
 stronger magnetic fields, larger Alfv\'en radii and therefore experience
 greater angular momentum loss rate \citep[\eg][]{schatzman1962, kraft1967,
