--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -616,25 +616,6 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{west2011,
-       author = {{West}, Andrew A. and {Morgan}, Dylan P. and {Bochanski {\it et al}}, John J.},
-        title = "{The Sloan Digital Sky Survey Data Release 7 Spectroscopic M Dwarf Catalog. I. Data}",
-      journal = {\aj},
-     keywords = {brown dwarfs, Galaxy: kinematics and dynamics, stars: abundances, stars: activity, stars: late-type, stars: low-mass, Astrophysics - Solar and Stellar Astrophysics},
-         year = "2011",
-        month = "Mar",
-       volume = {141},
-       number = {3},
-          eid = {97},
-        pages = {97},
-          doi = {10.1088/0004-6256/141/3/97},
-archivePrefix = {arXiv},
-       eprint = {1101.1082},
- primaryClass = {astro-ph.SR},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2011AJ....141...97W},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
 @ARTICLE{brown2011,
        author = {{Brown}, Timothy M. and {Latham}, David W. and {Everett {\it et al}}, Mark E.},
         title = "{Kepler Input Catalog: Photometric Calibration and Stellar Classification}",
@@ -1513,6 +1494,42 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{west2004,
+       author = {{West}, Andrew A. and {Hawley}, Suzanne L. and {Walkowicz {\it et al}}, Lucianne M.},
+        title = "{Spectroscopic Properties of Cool Stars in the Sloan Digital Sky Survey: An Analysis of Magnetic Activity and a Search for Subdwarfs}",
+      journal = {\aj},
+     keywords = {Galaxy: Structure, Galaxy: Solar Neighborhood, Stars: Activity, Stars: Late-Type, Stars: Low-Mass, Brown Dwarfs, Stars: Subdwarfs, Astrophysics},
+         year = 2004,
+        month = jul,
+       volume = {128},
+       number = {1},
+        pages = {426-436},
+          doi = {10.1086/421364},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0403486},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004AJ....128..426W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{west2006,
+       author = {{West}, Andrew A. and {Bochanski}, John J. and {Hawley {\it et al}}, Suzanne L.},
+        title = "{Using the Galactic Dynamics of M7 Dwarfs to Infer the Evolution of Their Magnetic Activity}",
+      journal = {\aj},
+     keywords = {Galaxy: Kinematics and Dynamics, Galaxy: Structure, Galaxy: Solar Neighborhood, Stars: Activity, Stars: Late-Type, Stars: Low-Mass, Brown Dwarfs, Astrophysics},
+         year = 2006,
+        month = dec,
+       volume = {132},
+       number = {6},
+        pages = {2507-2512},
+          doi = {10.1086/508652},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0609001},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006AJ....132.2507W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{west2008,
        author = {{West}, Andrew A. and {Hawley}, Suzanne L. and {Bochanski {\it et al}}, John J.},
         title = "{Constraining the Age-Activity Relation for Cool Stars: The Sloan Digital Sky Survey Data Release 5 Low-Mass Star Spectroscopic Sample}",
@@ -1531,6 +1548,43 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@INPROCEEDINGS{west2009,
+       author = {{West}, Andrew A. and {Hawley}, Suzanne L. and {Bochanski {\it et al.}}, John J.},
+        title = "{Using magnetic activity and Galactic dynamics to constrain the ages of M dwarfs}",
+     keywords = {stars: activity, stars: kinematics, stars: late-type, stars: low-mass, brown dwarfs, Astrophysics},
+    booktitle = {The Ages of Stars},
+         year = 2009,
+       editor = {{Mamajek}, Eric E. and {Soderblom}, David R. and {Wyse}, Rosemary F.~G.},
+       series = {IAU Symposium},
+       volume = {258},
+        month = jun,
+        pages = {327-336},
+          doi = {10.1017/S1743921309031986},
+archivePrefix = {arXiv},
+       eprint = {0812.1223},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009IAUS..258..327W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{west2011,
+       author = {{West}, Andrew A. and {Morgan}, Dylan P. and {Bochanski {\it et al}}, John J.},
+        title = "{The Sloan Digital Sky Survey Data Release 7 Spectroscopic M Dwarf Catalog. I. Data}",
+      journal = {\aj},
+     keywords = {brown dwarfs, Galaxy: kinematics and dynamics, stars: abundances, stars: activity, stars: late-type, stars: low-mass, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2011",
+        month = "Mar",
+       volume = {141},
+       number = {3},
+          eid = {97},
+        pages = {97},
+          doi = {10.1088/0004-6256/141/3/97},
+archivePrefix = {arXiv},
+       eprint = {1101.1082},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011AJ....141...97W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 @ARTICLE{bird2013,
        author = {{Bird}, Jonathan C. and {Kazantzidis}, Stelios and {Weinberg {\it et al}}, David H.},
@@ -1637,6 +1691,24 @@ archivePrefix = {arXiv},
         pages = {204},
           doi = {10.1086/170269},
        adsurl = {https://ui.adsabs.harvard.edu/abs/1991ApJ...376..204M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reiners2008,
+       author = {{Reiners}, A. and {Basri}, G.},
+        title = "{Chromospheric Activity, Rotation, and Rotational Braking in M and L Dwarfs}",
+      journal = {\apj},
+     keywords = {stars: activity, stars: flare, stars: late-type, stars: low-mass, brown dwarfs, stars: rotation, Astrophysics},
+         year = 2008,
+        month = sep,
+       volume = {684},
+       number = {2},
+        pages = {1390-1403},
+          doi = {10.1086/590073},
+archivePrefix = {arXiv},
+       eprint = {0805.1059},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008ApJ...684.1390R},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -1846,39 +1918,3 @@ archivePrefix = {arXiv},
 }
 
 
-@ARTICLE{west2004,
-       author = {{West}, Andrew A. and {Hawley}, Suzanne L. and {Walkowicz {\it et al}}, Lucianne M.},
-        title = "{Spectroscopic Properties of Cool Stars in the Sloan Digital Sky Survey: An Analysis of Magnetic Activity and a Search for Subdwarfs}",
-      journal = {\aj},
-     keywords = {Galaxy: Structure, Galaxy: Solar Neighborhood, Stars: Activity, Stars: Late-Type, Stars: Low-Mass, Brown Dwarfs, Stars: Subdwarfs, Astrophysics},
-         year = 2004,
-        month = jul,
-       volume = {128},
-       number = {1},
-        pages = {426-436},
-          doi = {10.1086/421364},
-archivePrefix = {arXiv},
-       eprint = {astro-ph/0403486},
- primaryClass = {astro-ph},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2004AJ....128..426W},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-
-@ARTICLE{west2006,
-       author = {{West}, Andrew A. and {Bochanski}, John J. and {Hawley {\it et al}}, Suzanne L.},
-        title = "{Using the Galactic Dynamics of M7 Dwarfs to Infer the Evolution of Their Magnetic Activity}",
-      journal = {\aj},
-     keywords = {Galaxy: Kinematics and Dynamics, Galaxy: Structure, Galaxy: Solar Neighborhood, Stars: Activity, Stars: Late-Type, Stars: Low-Mass, Brown Dwarfs, Astrophysics},
-         year = 2006,
-        month = dec,
-       volume = {132},
-       number = {6},
-        pages = {2507-2512},
-          doi = {10.1086/508652},
-archivePrefix = {arXiv},
-       eprint = {astro-ph/0609001},
- primaryClass = {astro-ph},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2006AJ....132.2507W},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
