--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -743,10 +743,10 @@ model, could capture everything we now know about stellar spin-down.
 \label{sec:activity}
 
 The mass dependence of magnetic activity lifetimes has been demonstrated
-previously \racomment{for M dwarfs} \citep[\eg][]{west2008, newton2017,
-kiman2019} and, if the detectability of a rotation period is considered to be
-a magnetic activity proxy, then our results provide further evidence for a
-mass-dependent activity lifetime.
+previously \racomment{for M dwarfs} \citep[\eg][]{west2008, reiners2009,
+west2009, newton2017, kiman2019} and, if the detectability of a rotation
+period is considered to be a magnetic activity proxy, then our results provide
+further evidence for a mass-dependent activity lifetime.
 
 In order to measure a rotation period at all, there must be some magnetically
 active regions (either bright plages or dark spots), of a reasonable size on
